export const snapshot = {};

snapshot[`Issue List Command - Help Text 1`] = `
stdout:
\`
Usage: list

Description:

  List your issues

Options:

  -h, --help                            - Show this help.                                                                                                              
  -s, --state          <state>          - Filter by issue state (can be repeated for multiple states)           (Default: [ \\x1b[32m"unstarted"\\x1b[39m ], Values: \\x1b[32m"triage"\\x1b[39m, \\x1b[32m"backlog"\\x1b[39m,
                                                                                                                \\x1b[32m"unstarted"\\x1b[39m, \\x1b[32m"started"\\x1b[39m, \\x1b[32m"completed"\\x1b[39m, \\x1b[32m"canceled"\\x1b[39m)       
  --all-states                          - Show issues from all states                                                                                                  
  --all                                 - Shortcut for --all-states --all-assignees --limit 0                                                                          
  --assignee           <assignee>       - Filter by assignee (username)                                                                                                
  -A, --all-assignees                   - Show issues for all assignees                                                                                                
  -U, --unassigned                      - Show only unassigned issues                                                                                                  
  --sort               <sort>           - Sort order (can also be set via LINEAR_ISSUE_SORT)                    (Values: \\x1b[32m"manual"\\x1b[39m, \\x1b[32m"priority"\\x1b[39m)                         
  --team               <team>           - Team to list issues for (if not your default team)                                                                           
  --project            <project>        - Filter by project name                                                                                                       
  --cycle              <cycle>          - Filter by cycle name, number, or 'active'                                                                                    
  --milestone          <milestone>      - Filter by project milestone name (requires --project)                                                                        
  --query              <query>          - Filter by title or description substring                                                                                     
  --parent             <parent>         - Filter by parent issue identifier                                                                                            
  --priority           <priority>       - Filter by priority (0-4 or none/urgent/high/medium/low)                                                                      
  --updated-before     <updatedBefore>  - Filter issues updated before an ISO date or datetime                                                                         
  --due-before         <dueBefore>      - Filter issues due before a date (YYYY-MM-DD)                                                                                 
  --limit              <limit>          - Maximum number of issues to fetch (default: 50, use 0 for unlimited)  (Default: \\x1b[33m50\\x1b[39m)                                          
  -j, --json                            - Output as JSON                                                                                                               
  -w, --web                             - Open in web browser                                                                                                          
  -a, --app                             - Open in Linear.app                                                                                                           
  --no-pager                            - Disable automatic paging for long output                                                                                     

\`
stderr:
""
`;

snapshot[`Issue List Command - Shows Due Date Column 1`] = `
stdout:
"◌   ID      TITLE                              LABELS  E A  DUE        STATE       UPDATED   
⚠⚠⚠ ENG-123 Fix authentication expiry handling backend 3 YK 2025-08-25 In Progress 1 day ago 
▄   ENG-124 Audit session timeout copy                 - -  -          Todo        2 days ago
"
stderr:
""
`;

snapshot[`Issue List Command - JSON Output 1`] = `
stdout:
'[
  {
    "id": "issue-1",
    "identifier": "ENG-123",
    "title": "Fix authentication expiry handling",
    "url": "https://linear.app/test/issue/ENG-123/fix-authentication-expiry-handling",
    "dueDate": "2025-08-25",
    "priority": 1,
    "estimate": 3,
    "assignee": {
      "id": "user-1",
      "initials": "YK",
      "name": "ykakui",
      "displayName": "Yuya Kakui"
    },
    "state": {
      "id": "state-1",
      "name": "In Progress",
      "color": "#f87462"
    },
    "team": {
      "id": "team-1",
      "key": "ENG",
      "name": "Engineering"
    },
    "project": {
      "id": "project-1",
      "name": "Auth Refresh",
      "slugId": "auth-refresh"
    },
    "parent": {
      "id": "issue-parent-1",
      "identifier": "ENG-100",
      "title": "Refresh auth platform work"
    },
    "labels": {
      "nodes": [
        {
          "id": "label-1",
          "name": "backend",
          "color": "#4f46e5"
        }
      ]
    },
    "updatedAt": "2025-08-16T15:30:00Z"
  }
]
'
stderr:
""
`;

snapshot[`Issue List Command - All Shortcut 1`] = `
stdout:
'[
  {
    "id": "issue-3",
    "identifier": "ENG-125",
    "title": "Enumerate all open work",
    "url": "https://linear.app/test/issue/ENG-125/enumerate-all-open-work",
    "dueDate": null,
    "priority": 2,
    "estimate": null,
    "assignee": null,
    "state": {
      "id": "state-3",
      "name": "Backlog",
      "color": "#bec2c8"
    },
    "team": {
      "id": "team-1",
      "key": "ENG",
      "name": "Engineering"
    },
    "project": null,
    "parent": null,
    "labels": {
      "nodes": []
    },
    "updatedAt": "2025-08-14T15:30:00Z"
  }
]
'
stderr:
""
`;

snapshot[`Issue List Command - Backlog Includes Unassigned By Default 1`] = `
stdout:
'[
  {
    "id": "issue-2",
    "identifier": "ENG-124",
    "title": "Audit session timeout copy",
    "url": "https://linear.app/test/issue/ENG-124/audit-session-timeout-copy",
    "dueDate": null,
    "priority": 4,
    "estimate": null,
    "assignee": null,
    "state": {
      "id": "state-2",
      "name": "Backlog",
      "color": "#bec2c8"
    },
    "team": {
      "id": "team-1",
      "key": "ENG",
      "name": "Engineering"
    },
    "project": null,
    "parent": null,
    "labels": {
      "nodes": []
    },
    "updatedAt": "2025-08-15T15:30:00Z"
  }
]
'
stderr:
""
`;

snapshot[`Issue List Command - All Shortcut Validation Failure 1`] = `
stdout:
'{
  "success": false,
  "error": {
    "type": "validation_error",
    "message": "Cannot specify multiple assignee filters (--assignee, --all-assignees, --unassigned, --all)",
    "suggestion": null,
    "context": "Failed to list issues"
  }
}
'
stderr:
""
`;

snapshot[`Issue List Command - Applies Bot Filters 1`] = `
stdout:
"[]
"
stderr:
""
`;

snapshot[`Issue List Command - JSON Validation Failure 1`] = `
stdout:
'{
  "success": false,
  "error": {
    "type": "validation_error",
    "message": "Invalid --due-before value: 2025-02-31",
    "suggestion": "Use a real calendar date in YYYY-MM-DD format.",
    "context": "Failed to list issues"
  }
}
'
stderr:
""
`;

snapshot[`Issue List Command - JSON Parse Failure 1`] = `
stdout:
'{
  "success": false,
  "error": {
    "type": "validation_error",
    "message": "Missing value for option \\\\"--query\\\\".",
    "suggestion": null,
    "context": "Failed to list issues"
  }
}
'
stderr:
""
`;
